[gd_scene load_steps=4 format=3 uid="uid://c8iu4snwbg41r"]

[ext_resource type="Script" uid="uid://obk2dm5gv6w1" path="res://intocutscene.gd" id="1_msnbr"]
[ext_resource type="Texture2D" uid="uid://fqdwg0gp4ybn" path="res://down.tres" id="2_3358l"]
[ext_resource type="Texture2D" uid="uid://cbhi5liv23hsg" path="res://icon.svg" id="3_iux7f"]

[node name="IntoCutscene" type="Node2D"]
script = ExtResource("1_msnbr")

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="DialogPanel" type="Panel" parent="HUDLayer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="TextLabel" type="Label" parent="HUDLayer/DialogPanel"]
layout_mode = 0
offset_left = 365.0
offset_top = 73.0
offset_right = 967.0
offset_bottom = 260.0

[node name="NameLabel" type="Label" parent="HUDLayer/DialogPanel"]
layout_mode = 0
offset_left = 104.0
offset_top = 79.0
offset_right = 144.0
offset_bottom = 102.0

[node name="PressLabel" type="Label" parent="HUDLayer/DialogPanel"]
layout_mode = 0
offset_left = 491.0
offset_top = 596.0
offset_right = 680.0
offset_bottom = 619.0
text = "Press Space To Continue"

[node name="Hero" type="Sprite2D" parent="."]
position = Vector2(397, 472.99997)
scale = Vector2(0.66796875, 0.66333336)
texture = ExtResource("2_3358l")

[node name="Wizard" type="Sprite2D" parent="."]
position = Vector2(839, 477)
scale = Vector2(0.8515625, 0.86)
texture = ExtResource("3_iux7f")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="LineTimer" type="Timer" parent="."]
wait_time = 10.0
